# yeastar_connector

./: LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
yeastar_connector/: api.py  hooks.py  install.py  modules.txt  sync.py  utils.py  yeastar_client.py
yeastar_connector/config/: desktop.py
yeastar_connector/yeastar_connector/: api.py  yeastar_client.py
yeastar_connector/yeastar_connector/doctype/yeastar_agent/: yeastar_agent.json  yeastar_agent.py
yeastar_connector/yeastar_connector/doctype/yeastar_call_log/: yeastar_call_log.json  yeastar_call_log.py
yeastar_connector/yeastar_connector/doctype/yeastar_settings/: yeastar_settings.json  yeastar_settings.py
