[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yeastar_connector"
version = "0.0.1"
description = "Private Yeastar P-Series (P570) integration for ERPNext/Frappe"
authors = [{ name = "Mostafa EL-Areef", email = "info@el3ref.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[tool.setuptools]
include-package-data = true
